[package]
name = "cosm-orc"
version = "4.1.0"
edition = "2021"
authors = [
    "Harry Hull <harry.hull1@gmail.com>",
    "Kromsten kromsten@megarock.labs",
]

readme = "README.md"
description = "Cosmwasm smart contract orchestration and gas profiling library"
repository = "https://github.com/kromsten/cosm-orc.git"

keywords = ["cosmos", "cosmwasm", "smart-contract", "profiling"]
categories = ["cryptography::cryptocurrencies"]
license = "Apache-2.0"

[features]
optimize = ["cw-optimizoor"]

[dependencies]
cosm-tome      = { git = "https://github.com/kromsten/cosm-tome"  }

thiserror = "1.0.31"
erased-serde = "0.4.4"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0"
log = "0.4.0"
config = { version = "0.14.0", features = ["yaml"] }
tokio = { version = "1.20.1", default-features=false }

cw-optimizoor = { version = "0.10.0", optional = true }

[dev-dependencies]
cosm-tome      = { git = "https://github.com/kromsten/cosm-tome", features = ["mocks"] }
cosmos-sdk-proto = "0.21.1"

assert_matches = "1.5"
cw20-base = "0.15"
cw20 = "0.15"
faux = "0.1.7"
